cmake_minimum_required(VERSION 3.10)
project(CPP)

set(CMAKE_CXX_STANDARD 11)

add_executable(ReverseListNode ListNode/206/ReverseListNode.cpp)
add_executable(ReverseLinkedList2 ListNode/092/ReverseLinkedList2.cpp)
add_executable(IntersectionTwoLinkedLists ListNode/160/IntersectionTwoLinkedLists.cpp)
add_executable(IntersectionTwoLinkedLists2 ListNode/160/IntersectionTwoLinkedLists2.cpp)

add_executable(PartitionList2 ListNode/86/PartitionList2.cpp)
add_executable(PartitionList ListNode/86/PartitionList.cpp)
add_executable(CopyListwithRandomPointer ListNode/138/CopyListwithRandomPointer.cpp)

add_executable(MergeTwoSortedLists ListNode/21/MergeTwoSortedLists.cpp)
add_executable(MergeKSoretedLists ListNode/23/MergeKSoretedLists.cpp)
add_executable(MergeKSoretedLists2 ListNode/23/MergeKSoretedLists2.cpp)
add_executable(MergeKSortedLists3 ListNode/23/MergeKSortedLists3.cpp)
add_executable(ImplementStackusingQueues Stack&Queue/225/ImplementStackusingQueues.cpp)
add_executable(ImplementQueueusingStacks Stack&Queue/232/ImplementQueueusingStacks.cpp)
add_executable(MinStack Stack&Queue/155/MinStack.cpp)
add_executable(poj1363 Stack&Queue/poj1363/poj1363.cpp)
add_executable(BasicCalculator Stack&Queue/224/BasicCalculator.cpp)
add_executable(KthLargestElementInAnArray Stack&Queue/215/KthLargestElementInAnArray.cpp)

add_executable(FindMedianfromDataStream Stack&Queue/295/FindMedianfromDataStream.cpp)
add_executable(LinkedListCycle2 ListNode/142/LinkedListCycle2.cpp)
add_executable( AssignCookies "Greedy/455/ AssignCookies.cpp")
add_executable(WiggleSubsequence Greedy/376/WiggleSubsequence.cpp)
add_executable(RemoveKDigits Greedy/402/RemoveKDigits.cpp)
add_executable(JumpGame Greedy/55/JumpGame.cpp)
add_executable(JumpGame2 Greedy/45/JumpGame2.cpp)
add_executable(MinimumNumberofArrowstoBurstBalloons Greedy/452/MinimumNumberofArrowstoBurstBalloons.cpp)
add_executable(poj2431 Greedy/poj2431/poj2431.cpp)
add_executable(Subsets Recursion&Backtrack/78/Subsets.cpp)
add_executable(Subsets1 Recursion&Backtrack/78/Subsets1.cpp)