cmake_minimum_required(VERSION 3.10)
project(CPP)

set(CMAKE_CXX_STANDARD 11)

add_executable(ReverseListNode ListNode/206/ReverseListNode.cpp)
add_executable(ReverseLinkedList2 ListNode/092/ReverseLinkedList2.cpp)
add_executable(IntersectionTwoLinkedLists ListNode/160/IntersectionTwoLinkedLists.cpp)
add_executable(IntersectionTwoLinkedLists2 ListNode/160/IntersectionTwoLinkedLists2.cpp)

add_executable(PartitionList2 ListNode/86/PartitionList2.cpp)
add_executable(PartitionList ListNode/86/PartitionList.cpp)
add_executable(CopyListwithRandomPointer ListNode/138/CopyListwithRandomPointer.cpp)

add_executable(MergeTwoSortedLists ListNode/21/MergeTwoSortedLists.cpp)
add_executable(MergeKSoretedLists ListNode/23/MergeKSoretedLists.cpp)
add_executable(MergeKSoretedLists2 ListNode/23/MergeKSoretedLists2.cpp)
add_executable(MergeKSortedLists3 ListNode/23/MergeKSortedLists3.cpp)
add_executable(ImplementStackusingQueues Stack&Queue/225/ImplementStackusingQueues.cpp)
add_executable(ImplementQueueusingStacks Stack&Queue/232/ImplementQueueusingStacks.cpp)
add_executable(MinStack Stack&Queue/155/MinStack.cpp)
add_executable(poj1363 Stack&Queue/poj1363/poj1363.cpp)
add_executable(BasicCalculator Stack&Queue/224/BasicCalculator.cpp)
add_executable(KthLargestElementInAnArray Stack&Queue/215/KthLargestElementInAnArray.cpp)

add_executable(FindMedianfromDataStream Stack&Queue/295/FindMedianfromDataStream.cpp)
add_executable(LinkedListCycle2 ListNode/142/LinkedListCycle2.cpp)
add_executable( AssignCookies "Greedy/455/ AssignCookies.cpp")
add_executable(WiggleSubsequence Greedy/376/WiggleSubsequence.cpp)
add_executable(RemoveKDigits Greedy/402/RemoveKDigits.cpp)
add_executable(JumpGame Greedy/55/JumpGame.cpp)
add_executable(JumpGame2 Greedy/45/JumpGame2.cpp)
add_executable(MinimumNumberofArrowstoBurstBalloons Greedy/452/MinimumNumberofArrowstoBurstBalloons.cpp)
add_executable(poj2431 Greedy/poj2431/poj2431.cpp)
add_executable(Subsets Recursion&Backtrack/78/Subsets.cpp)
add_executable(Subsets1 Recursion&Backtrack/78/Subsets1.cpp)
add_executable(SubsetsRepeat Recursion&Backtrack/90/SubsetsRepeat.cpp)
add_executable(CombinationSumII Recursion&Backtrack/40/CombinationSumII.cpp)
add_executable(CombinationSumII2 Recursion&Backtrack/40/CombinationSumII2.cpp)

add_executable(GenerateParentheses Recursion&Backtrack/22/GenerateParentheses.cpp)
add_executable(MergeSortedArray ListNode/88/MergeSortedArray.cpp)
add_executable(GenerateAllKind Recursion&Backtrack/22/GenerateAllKind.cpp)
add_executable(N-Queens Recursion&Backtrack/51/N-Queens.cpp)
add_executable(PutDownTheQueen Recursion&Backtrack/51/PutDownTheQueen.cpp)

add_executable(ReverseListNodeII ListNode/206/ReverseListNodeII.cpp)
add_executable(CountofSmallerNumbersAfterSelf Recursion&Backtrack/315/CountofSmallerNumbersAfterSelf.cpp)

add_executable(PathSumII TreeNode/113/PathSumII.cpp)
add_executable(LowestCommonAncestorOfABinaryTree TreeNode/236/LowestCommonAncestorOfABinaryTree.cpp)


add_executable(FlattenBinaryTreetoLinkedListI TreeNode/114/FlattenBinaryTreetoLinkedListI.cpp)
add_executable(FlattenBinaryTreetoLinkedListII TreeNode/114/FlattenBinaryTreetoLinkedListII.cpp)
add_executable(BinaryTreeRightSideView TreeNode/199/BinaryTreeRightSideView.cpp)
add_executable(CourseSchedule Graph/207/CourseSchedule.cpp)
add_executable(CourseScheduleII Graph/207/CourseScheduleII.cpp)
add_executable(SearchInsertPosition BinarySearch&TreeSearch/35/SearchInsertPosition.cpp)
add_executable(SearchForARange BinarySearch&TreeSearch/34/SearchForARange.cpp)
add_executable(Search in Rotated Sorted Array "BinarySearch&TreeSearch/33/SearchinRotatedSortedArray.cpp")
add_executable(SearchinRotatedSortedArray BinarySearch&TreeSearch/33/SearchinRotatedSortedArray.cpp)
add_executable(SerializeAndDeserializeBST BinarySearch&TreeSearch/449/SerializeAndDeserializeBST.cpp)
add_executable(CountOfSmallerNumberAfterSelfII BinarySearch&TreeSearch/315/CountOfSmallerNumberAfterSelfII.cpp)
add_executable(LongestPalindrome Hash&String/409/LongestPalindrome.cpp)
add_executable(WordPattern Hash&String/290/WordPattern.cpp)
add_executable(GroupAnagrams Hash&String/49/GroupAnagrams.cpp)
add_executable(LongestSubstringWithoutRepeatingCharacters BinarySearch&TreeSearch/3/LongestSubstringWithoutRepeatingCharacters.cpp)
add_executable(RepeatedDNASequencesI BinarySearch&TreeSearch/187/RepeatedDNASequencesI.cpp)
add_executable(RepeatedDNASequencesII BinarySearch&TreeSearch/187/RepeatedDNASequencesII.cpp)
add_executable(MinimumWindowSubstring BinarySearch&TreeSearch/76/MinimumWindowSubstring.cpp)
add_executable(PrepareKnowlege BinarySearch&TreeSearch/76/prepareKnowlege.cpp)

add_executable(NumberOfIslands Search/200/NumberOfIslands.cpp)
add_executable(prepareDFS Search/200/prepareDFS.cpp)
add_executable(prepareBFS Search/200/prepareBFS.cpp)
add_executable(WordLadder Search/127/WordLadder.cpp)
add_executable(MergeTwoBinaryTrees TreeNode/617/MergeTwoBinaryTrees.cpp)
add_executable(WorderLadderII Search/126/WorderLadderII.cpp)
add_executable(MatchsticksToSquare Search/473/MatchsticksToSquare.cpp)
add_executable(MatchsticksToSquareII Search/473/MatchsticksToSquareII.cpp)
add_executable(TrappingRainWaterII Search/407/TrappingRainWaterII.cpp)
add_executable(HouseRobber DynamicProgramming/198/HouseRobber.cpp)
add_executable(MaximumSubarray DynamicProgramming/53/MaximumSubarray.cpp)
add_executable(CoinChange Hash&String/322/CoinChange.cpp)
add_executable(Triangle DynamicProgramming/120/Triangle.cpp)
add_executable(LongestIncreasingSubsequence DynamicProgramming/300/LongestIncreasingSubsequence.cpp)
add_executable(LongestIncreasingSubsequenceII DynamicProgramming/300/LongestIncreasingSubsequenceII.cpp)
add_executable(LongestIncreasingSubsequenceIII DynamicProgramming/300/LongestIncreasingSubsequenceIII.cpp)
add_executable(SingleNumber Hash&String/136/SingleNumber.cpp)
add_executable(MinimumPathSum DynamicProgramming/64/MinimumPathSum.cpp)
add_executable(DungeonGame DynamicProgramming/174/DungeonGame.cpp)

add_executable(MaximumDepthOfBinaryTree     "TreeNode/104/MaximumDepthOfBinaryTree    .cpp")
add_executable(InvertBinaryTree TreeNode/226/InvertBinaryTree.cpp)
add_executable(DiameterOfBinaryTree TreeNode/543/DiameterOfBinaryTree.cpp)
add_executable(SameTree TreeNode/100/SameTree.cpp)
add_executable(SameTreeII TreeNode/100/SameTreeII.cpp)
add_executable(DuplicateNumber Offer/03/DuplicateNumber.cpp)
add_executable(DuplicateNumberII Offer/03/DuplicateNumberII.cpp)
add_executable(DuplicateNumberIII Offer/03/DuplicateNumberIII.cpp)
add_executable(FindSquareVecNumber Offer/04/FindSquareVecNumber.cpp)
add_executable(ReplaceWtf Offer/05/ReplaceBlank.cpp)


add_executable(ReversePrintList Offer/06/ReversePrintList.cpp)
add_executable(QueueUsingStack Offer/09/QueueUsingStack.cpp)
add_executable(PowerOfTwo Math/231/PowerOfTwo.cpp)
add_executable(Fibonacci Offer/10/Fibonacci.cpp)
add_executable(JumpFrog Offer/10/JumpFrog.cpp)
add_executable(InsertSort "Common/Sort/Insert Sort/InsertSort.cpp")
add_executable(SelectionSort "Common/Sort/Selection Sort/SelectionSort.cpp")
add_executable(QuickSort "Common/Sort/Quick Sort/QuickSort.cpp")

add_executable(PreOrderTraverse Common/Tree/Travel/PreOrderTraverse.cpp)
add_executable(InOrderTraverse Common/Tree/Travel/InOrderTraverse.cpp)
add_executable(PostOrderTraverse Common/Tree/Travel/PostOrderTraverse.cpp)
add_executable(DepthOfBinaryTree Offer/55/DepthOfBinaryTree.cpp)