cmake_minimum_required(VERSION 3.10)
project(CPP)

set(CMAKE_CXX_STANDARD 11)

add_executable(ReverseListNode ListNode/206/ReverseListNode.cpp)
add_executable(ReverseLinkedList2 ListNode/092/ReverseLinkedList2.cpp)
add_executable(IntersectionTwoLinkedLists ListNode/160/IntersectionTwoLinkedLists.cpp)
add_executable(IntersectionTwoLinkedLists2 ListNode/160/IntersectionTwoLinkedLists2.cpp)
add_executable(PartitionList2 ListNode/86/PartitionList2.cpp)
add_executable(PartitionList ListNode/86/PartitionList.cpp)
add_executable(CopyListwithRandomPointer ListNode/138/CopyListwithRandomPointer.cpp)
add_executable(MergeTwoSortedLists ListNode/21/MergeTwoSortedLists.cpp)
add_executable(MergeKSoretedLists ListNode/23/MergeKSoretedLists.cpp)
add_executable(MergeKSoretedLists2 ListNode/23/MergeKSoretedLists2.cpp)
add_executable(MergeKSortedLists3 ListNode/23/MergeKSortedLists3.cpp)
add_executable(ImplementStackusingQueues Stack&Queue/225/ImplementStackusingQueues.cpp)
add_executable(ImplementQueueusingStacks Stack&Queue/232/ImplementQueueusingStacks.cpp)
add_executable(MinStack Stack&Queue/155/MinStack.cpp)
add_executable(poj1363 Stack&Queue/poj1363/poj1363.cpp)
add_executable(BasicCalculator Stack&Queue/224/BasicCalculator.cpp)
add_executable(KthLargestElementInAnArray Stack&Queue/215/KthLargestElementInAnArray.cpp)
add_executable(FindMedianfromDataStream Stack&Queue/295/FindMedianfromDataStream.cpp)
add_executable(LinkedListCycle2 ListNode/142/LinkedListCycle2.cpp)
add_executable(AssignCookies "Greedy/455/ AssignCookies.cpp")
add_executable(WiggleSubsequence Greedy/376/WiggleSubsequence.cpp)
add_executable(RemoveKDigits Greedy/402/RemoveKDigits.cpp)
add_executable(JumpGame Greedy/55/JumpGame.cpp)
add_executable(JumpGame2 Greedy/45/JumpGame2.cpp)
add_executable(MinimumNumberofArrowstoBurstBalloons Greedy/452/MinimumNumberofArrowstoBurstBalloons.cpp)
add_executable(poj2431 Greedy/poj2431/poj2431.cpp)
add_executable(Subsets Recursion&Backtrack/78/Subsets.cpp)
add_executable(Subsets1 Recursion&Backtrack/78/Subsets1.cpp)
add_executable(SubsetsRepeat Recursion&Backtrack/90/SubsetsRepeat.cpp)
add_executable(CombinationSumII Recursion&Backtrack/40/CombinationSumII.cpp)
add_executable(CombinationSumII2 Recursion&Backtrack/40/CombinationSumII2.cpp)
add_executable(GenerateParentheses Recursion&Backtrack/22/GenerateParentheses.cpp)
add_executable(MergeSortedArray ListNode/88/MergeSortedArray.cpp)
add_executable(GenerateAllKind Recursion&Backtrack/22/GenerateAllKind.cpp)
add_executable(N-Queens Recursion&Backtrack/51/N-Queens.cpp)
add_executable(PutDownTheQueen Recursion&Backtrack/51/PutDownTheQueen.cpp)
add_executable(ReverseListNodeII ListNode/206/ReverseListNodeII.cpp)
add_executable(CountofSmallerNumbersAfterSelf Recursion&Backtrack/315/CountofSmallerNumbersAfterSelf.cpp)
add_executable(PathSumII TreeNode/113/PathSumII.cpp)
add_executable(LowestCommonAncestorOfABinaryTree TreeNode/236/LowestCommonAncestorOfABinaryTree.cpp)
add_executable(FlattenBinaryTreetoLinkedListI TreeNode/114/FlattenBinaryTreetoLinkedListI.cpp)
add_executable(FlattenBinaryTreetoLinkedListII TreeNode/114/FlattenBinaryTreetoLinkedListII.cpp)
add_executable(BinaryTreeRightSideView TreeNode/199/BinaryTreeRightSideView.cpp)
add_executable(CourseSchedule Graph/207/CourseSchedule.cpp)
add_executable(CourseScheduleII Graph/207/CourseScheduleII.cpp)
add_executable(SearchInsertPosition BinarySearch&TreeSearch/35/SearchInsertPosition.cpp)
add_executable(SearchForARange BinarySearch&TreeSearch/34/SearchForARange.cpp)
add_executable(SearchinRotatedSortedArray BinarySearch&TreeSearch/33/SearchinRotatedSortedArray.cpp)
add_executable(SerializeAndDeserializeBST BinarySearch&TreeSearch/449/SerializeAndDeserializeBST.cpp)
add_executable(CountOfSmallerNumberAfterSelfII BinarySearch&TreeSearch/315/CountOfSmallerNumberAfterSelfII.cpp)
add_executable(LongestPalindrome Hash&String/409/LongestPalindrome.cpp)
add_executable(WordPattern Hash&String/290/WordPattern.cpp)
add_executable(GroupAnagrams Hash&String/49/GroupAnagrams.cpp)
add_executable(LongestSubstringWithoutRepeatingCharacters BinarySearch&TreeSearch/3/LongestSubstringWithoutRepeatingCharacters.cpp)
add_executable(RepeatedDNASequencesI BinarySearch&TreeSearch/187/RepeatedDNASequencesI.cpp)
add_executable(RepeatedDNASequencesII BinarySearch&TreeSearch/187/RepeatedDNASequencesII.cpp)
add_executable(MinimumWindowSubstring BinarySearch&TreeSearch/76/MinimumWindowSubstring.cpp)
add_executable(PrepareKnowlege BinarySearch&TreeSearch/76/prepareKnowlege.cpp)
add_executable(NumberOfIslands Search/200/NumberOfIslands.cpp)
add_executable(prepareDFS Search/200/prepareDFS.cpp)
add_executable(prepareBFS Search/200/prepareBFS.cpp)
add_executable(WordLadder Search/127/WordLadder.cpp)
add_executable(MergeTwoBinaryTrees TreeNode/617/MergeTwoBinaryTrees.cpp)
add_executable(WorderLadderII Search/126/WorderLadderII.cpp)
add_executable(MatchsticksToSquare Search/473/MatchsticksToSquare.cpp)
add_executable(MatchsticksToSquareII Search/473/MatchsticksToSquareII.cpp)
add_executable(TrappingRainWaterII Search/407/TrappingRainWaterII.cpp)
add_executable(HouseRobber DynamicProgramming/198/HouseRobber.cpp)
add_executable(MaximumSubarray DynamicProgramming/53/MaximumSubarray.cpp)
add_executable(CoinChange Hash&String/322/CoinChange.cpp)
add_executable(Triangle DynamicProgramming/120/Triangle.cpp)
add_executable(LongestIncreasingSubsequence DynamicProgramming/300/LongestIncreasingSubsequence.cpp)
add_executable(LongestIncreasingSubsequenceII DynamicProgramming/300/LongestIncreasingSubsequenceII.cpp)
add_executable(LongestIncreasingSubsequenceIII DynamicProgramming/300/LongestIncreasingSubsequenceIII.cpp)
add_executable(SingleNumberI1 Bit/136/SingleNumberI1.cpp)
add_executable(MinimumPathSum DynamicProgramming/64/MinimumPathSum.cpp)
add_executable(DungeonGame DynamicProgramming/174/DungeonGame.cpp)
add_executable(MaximumDepthOfBinaryTree "TreeNode/104/MaximumDepthOfBinaryTree    .cpp")
add_executable(InvertBinaryTree TreeNode/226/InvertBinaryTree.cpp)
add_executable(DiameterOfBinaryTree TreeNode/543/DiameterOfBinaryTree.cpp)
add_executable(SameTree TreeNode/100/SameTree.cpp)
add_executable(SameTreeII TreeNode/100/SameTreeII.cpp)
add_executable(DuplicateNumber Offer/03/DuplicateNumber.cpp)
add_executable(DuplicateNumberII Offer/03/DuplicateNumberII.cpp)
add_executable(DuplicateNumberIII Offer/03/DuplicateNumberIII.cpp)
add_executable(FindSquareVecNumber Offer/04/FindSquareVecNumber.cpp)
add_executable(ReplaceWtf Offer/05/ReplaceBlank.cpp)
add_executable(ReversePrintList Offer/06/ReversePrintList.cpp)
add_executable(QueueUsingStack Offer/09/QueueUsingStack.cpp)
add_executable(PowerOfTwo Math/231/PowerOfTwo.cpp)
add_executable(Fibonacci Offer/10/Fibonacci.cpp)
add_executable(JumpFrog Offer/10/JumpFrog.cpp)
add_executable(InsertSort "Common/Sort/Insert Sort/InsertSort.cpp")
add_executable(SelectionSort "Common/Sort/Selection Sort/SelectionSort.cpp")
add_executable(QuickSort "Common/Sort/Quick Sort/QuickSort.cpp")
add_executable(PreOrderTraverse Common/Tree/Travel/PreOrderTraverse.cpp)
add_executable(InOrderTraverse Common/Tree/Travel/InOrderTraverse.cpp)
add_executable(PostOrderTraverse Common/Tree/Travel/PostOrderTraverse.cpp)
add_executable(DepthOfBinaryTree Offer/55/DepthOfBinaryTree.cpp)
add_executable(ConstructBinaryTreeFromPreorderAndInorderTraversal "Offer/07/ConstructBinaryTreeFromPreorderAndInorderTraversal .cpp")
add_executable(BinaryTreeNextNode Offer/08/BinaryTreeNextNode.cpp)
add_executable(MirrorBinaryTree Offer/27/MirrorBinaryTree.cpp)
add_executable(HasSubtree Offer/26/HasSubtree.cpp)
add_executable(SymmetricTree Offer/28/SymmetricTree.cpp)
add_executable(LowestCommonAncterOffer Offer/68/LowestCommonAncterOffer.cpp)
add_executable(HammingDistance Math/461/HammingDistance.cpp)
add_executable(LayerOrderTraverse Common/Tree/Travel/LayerOrderTraverse.cpp)
add_executable(BinaryTreeLevelOrderTraversalII TreeNode/107/BinaryTreeLevelOrderTraversalII.cpp)
add_executable(SerializeAndDeserializeBinaryTree TreeNode/297/SerializeAndDeserializeBinaryTree.cpp)
add_executable(TreeNode Common/Tree/Travel/TreeNode.h)
add_executable(RecycleLinkListOffer Offer/23/RecycleLinkListOffer.cpp)
add_executable(MergeTwoSortedListOffer Offer/25/MergeTwoSortedListOffer.cpp)
add_executable(ReverseListOffer Offer/24/ReverseListOffer.cpp)
add_executable(SingleNumberI2 Bit/136/SingleNumberI2.cpp)
add_executable(BitOneCount Offer/15/BitOneCount.cpp)
add_executable(PowOffer Offer/16/PowOffer.cpp)
add_executable(CuttingRangeOffer Offer/14/CuttingRangeOffer.cpp)
add_executable(HeapSort Common/Sort/HeapSort/HeapSort.cpp)
add_executable(RemoveListNodeOffer Offer/18/RemoveListNodeOffer.cpp)
add_executable(FindMinnumInRotatedArrOffer Offer/11/FindMinnumInRotatedArrOffer.cpp)
add_executable(FindMinnumIndexInRoatedArrOffer Offer/11/FindMinnumIndexInRoatedArrOffer.cpp)
add_executable(FindMinimumInRotatedSortedArray BinarySearch&TreeSearch/153/FindMinimumInRotatedSortedArray.cpp)
add_executable(RemoveDuplicatesFromSortedList ListNode/83/RemoveDuplicatesFromSortedList.cpp)
add_executable(RemoveLinkedListElements ListNode/203/RemoveLinkedListElements.cpp)
add_executable(MinStackOffer Offer/30/MinStackOffer.cpp)
add_executable(StackPushPopOffer Offer/31/StackPushPopOffer.cpp)
add_executable(LayerTraverseOffer Offer/32/LayerTraverseOffer.cpp)
add_executable(PostOrderBSTOffer Offer/33/PostOrderBSTOffer.cpp)
add_executable(CopyRandomPointListOffer Offer/35/CopyRandomPointListOffer.cpp)
add_executable(ConvertBSTToTwoPointSortedListOffer Offer/36/ConvertBSTToTwoPointSortedListOffer.cpp)
add_executable(SerDecBinaryTreeOffer Offer/37/SerDecBinaryTreeOffer.cpp)
add_executable(PermutationStrOffer Offer/38/PermutationStrOffer.cpp)
add_executable(PermutationNumOffer Offer/38/PermutationNumOffer.cpp)
add_executable(TopKElemOffer Offer/40/TopKElemOffer.cpp)
add_executable(FindMedianFromDataStreamOffer Offer/41/FindMedianFromDataStreamOffer.cpp)
add_executable(MaxSubArraySumOffer Offer/42/MaxSubArraySumOffer.cpp)
add_executable(NumberOfDigitOneOffer Offer/43/NumberOfDigitOneOffer.cpp)
add_executable(TwoSum Hash&String/1/TwoSum.cpp)
add_executable(ReverseInteger Math/7/ReverseInteger.cpp)
add_executable(ClimbingStairs DynamicProgramming/70/ClimbingStairs.cpp)
add_executable(NthDigitOffer Offer/44/NthDigitOffer.cpp)
add_executable(PowDoubleOffer Offer/16/PowDoubleOffer.cpp)
add_executable(MinNumOffer Offer/45/MinNumOffer.cpp)
add_executable(DecodeWaysOffer Offer/46/DecodeWaysOffer.cpp)
add_executable(MaxnumPathSumOffer Offer/47/MaxnumPathSumOffer.cpp)
add_executable(LongestSubstringWithoutRepeatingCharactersOffer Offer/48/LongestSubstringWithoutRepeatingCharactersOffer.cpp)
add_executable(UglyNumberOffer Offer/49/UglyNumberOffer.cpp)
add_executable(FirstUniqueCharOffer Offer/50/FirstUniqueCharOffer.cpp)
add_executable(ReversePairsOffer Offer/51/ReversePairsOffer.cpp)
add_executable(IntersectionOfTwoLinkedListsOffer Offer/52/IntersectionOfTwoLinkedListsOffer.cpp)
add_executable(FindFirstAndLastPositionOfElementInSortedArray Offer/53/FindFirstAndLastPositionOfElementInSortedArray.cpp)
add_executable(MissingNumOffer Offer/53/MissingNumOffer.cpp)
add_executable(KthSmallestElementInABST Offer/54/KthSmallestElementInABST.cpp)
add_executable(IsAVLTreeOffer Offer/55/IsAVLTreeOffer.cpp)
add_executable(SingleNumberII Bit/137/SingleNumberII.cpp)
add_executable(SingleNumberIII Bit/260/SingleNumberIII.cpp)
add_executable(ReverseStringI Offer/58/ReverseStringI.cpp)
add_executable(ReverseStringII Offer/58/ReverseStringII.cpp)

add_executable(SingleNumOfferI Offer/56/SingleNumOfferI.cpp)
add_executable(SingleNumOfferII Offer/56/SingleNumOfferII.cpp)
add_executable(SlidingWindowMaximumOffer Offer/59/SlidingWindowMaximumOffer.cpp)
add_executable(SlidingWindowMaxOfferII Offer/59/SlidingWindowMaxOfferII.cpp)
add_executable(MaxNumInQueueOffer Offer/59/MaxNumInQueueOffer.cpp)
add_executable(QueueUsingStackOffer Offer/59/MaxQueueUsingStackOffer.cpp)
add_executable(RegularExpressionMatchingOffer Offer/19/RegularExpressionMatchingOffer.cpp)
add_executable(DiceSumOffer Offer/60/DiceSumOffer.cpp)
add_executable(StraightPokerOffer Offer/61/StraightPokerOffer.cpp)
add_executable(LastInCircleOffer Offer/62/LastInCircleOffer.cpp)
add_executable(BestTimeToBuyAndSellStockOffer Offer/63/BestTimeToBuyAndSellStockOffer.cpp)
add_executable(IntegerSumOffer Offer/65/IntegerSumOffer.cpp)
add_executable(NSumOffer Offer/64/NSumOffer.cpp)
add_executable(ProductOfArrayExceptSelfOffer Offer/66/ProductOfArrayExceptSelfOffer.cpp)
add_executable(LowestCommonAncterIIOffer Offer/68/LowestCommonAncterIIOffer.cpp)
add_executable(CrazyJumpFrogOffer Offer/10/CrazyJumpFrogOffer.cpp)

add_executable(StringCharOffer Offer/05/StringCharOffer.cpp)
add_executable(ReplaceBlankNewCoder Offer/05/ReplaceBlankNewCoder.cpp)
add_executable(UglyNumberIIOffer Offer/49/UglyNumberIIOffer.cpp)
add_executable(WordSearchOffer Offer/12/WordSearchOffer.cpp)